--- a/web/bower.json
+++ b/web/bower.json
@@ -12,7 +12,8 @@
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
-    "angular-toArrayFilter": "~1.0.0"
+    "angular-toArrayFilter": "~1.0.0",
+    "underscore": "~1.8.3"
   },
   "devDependencies": {
     "mockfirebase": "0.11.0",
